<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <CheckedTextView
        android:id="@+id/ModModeDisplayHeader"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="@string/modmode_header" />

    <RadioGroup
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/optNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/modmode_default" />

        <RadioButton
            android:id="@+id/optData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modmode_data" />

        <RadioButton
            android:id="@+id/optSSM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modmode_ssm" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/optDisInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DisIntText" />

    <CheckBox
        android:id="@+id/optSwpSSM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwpSSMText" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savebutton_text" />
    
</LinearLayout>